# sandbox

./: Cargo.toml  README.md  sandbox.yml
.github/workflows/: pages.yml
src/: args.rs  cache.rs  config.rs  download.rs  editor.rs  environment.rs  install.rs  lib.rs  main.rs  new.rs  reinstall.rs  search.rs  uninstall.rs
windows/: sandbox.wxs
