[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
dylib = "0.0.3"
flate2 = "1.0.25"
indicatif = "0.17.3"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
tar = "0.4.38"
tokio = { version = "1.16.1", features = ["full"] }
