[package]
name = "sandbox"
version = "0.2.1"
edition = "2021"
authors = ["WillKirkmanM <WillKirkmanMoller@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
flate2 = "1.0.26"
indicatif = "0.17.3"
reqwest = "0.11.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
tar = "0.4.38"
tokio = { version = "1.28.0", default_features = false, features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
